WIP #4: Updated the Noise Explorer engine to support generating WASM implementations.
# Changelog:

1. ### Noise Explorer CLI:
	- Added `wasm` as a valid value for the `—generate` flag.
	- Added full support for generating WASM implementations and 			tests.0
2. ### src/MakeFile
	- `make dependencies` installs [wasm-pack]() as it is a required dev dependency for generating and testing WASM implementations.

	- `make implementations`  generates custom Rust code that compiles to WASM, in addition to all the implementations it supported earlier.

	- `make wasm` compiles WASM binaries and generates helper files. It is recommended to run `make implementations` before executing `make wasm` for fresh implementations.

	- `make tests`  runs tests for WASM implementations in addition to all the other tests supported earlier. It is recommended that you would have Google Chrome installed on your computer, as the WASM tests make use of its engine in headless mode.

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,7 @@ dependencies:
 	@/bin/echo -n "[NoiseExplorer] Installing dependencies..."
 	@npm install -g pegjs
 	@npm install
+	@curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 	@/bin/echo " OK."
 
 parser:
@@ -19,6 +20,9 @@ implementations:
 	@rm -f parser/noiseParser.js
 	@pegjs -o parser/noiseParser.js parser/noiseParser.pegjs
 	@cd util && bash genImplementations.sh
+
+wasm:
+	@cd util && bash genWasmBins.sh
 
 tests:
 	@cd util && bash genTests.sh
