--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-if: branch = pre-release
-  matrix:
+matrix:
     include:
       - language: rust
         rust:
@@ -30,20 +29,20 @@ if: branch = pre-release
           -  sudo curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
           -  cd $TRAVIS_BUILD_DIR/implementations/wasm
           -  for pattern in ./*; do cd $pattern; wasm-pack test --firefox --headless; cd ..; done;
-  - after_success:
-      -  NOISE_VER="x" 
-      -  git config --global user.email "travis@travis-ci.org"
-      -  git config --global user.name "Travis CI"
-      -  sudo curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
-      -  git checkout master > /dev/null 2>&1
-      -  git merge --squash pre-release > /dev/null 2>&1
-      -  cd $TRAVIS_BUILD_DIR/src
-      -  make wasm
-      -  cd ../
-      -  git add * > /dev/null 2>&1
-      -  git commit -m "Release Noise Explorer v${NOISE_VER}" > /dev/null 2>&1
-      -  git remote rm origin
-      -  git remote add origin https://georgio:${GH_TOKEN}@github.com/SymbolicSoft/noiseexplorer.git > /dev/null 2>&1
-      -  git push origin master --quiet > /dev/null 2>&1
-      -  git tag -a v${NOISE_VER} -m "Noise Explorer v${NOISE_VER}"  > /dev/null 2>&1
-      -  git push --tags > /dev/null 2>&1  > /dev/null 2>&1
+# after_success:
+#     -  NOISE_VER="x" 
+#     -  git config --global user.email "travis@travis-ci.org"
+#     -  git config --global user.name "Travis CI"
+#     -  sudo curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+#     -  git checkout master > /dev/null 2>&1
+#     -  git merge --squash pre-release > /dev/null 2>&1
+#     -  cd $TRAVIS_BUILD_DIR/src
+#     -  make wasm
+#     -  cd ../
+#     -  git add * > /dev/null 2>&1
+#     -  git commit -m "Release Noise Explorer v${NOISE_VER}" > /dev/null 2>&1
+#     -  git remote rm origin
+#     -  git remote add origin https://georgio:${GH_TOKEN}@github.com/SymbolicSoft/noiseexplorer.git > /dev/null 2>&1
+#     -  git push origin master --quiet > /dev/null 2>&1
+#     -  git tag -a v${NOISE_VER} -m "Noise Explorer v${NOISE_VER}"  > /dev/null 2>&1
+#     -  git push --tags > /dev/null 2>&1  > /dev/null 2>&1
