--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ matrix:
         - "sudo curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh"
         - "cd $TRAVIS_BUILD_DIR/implementations/wasm"
         - "for pattern in ./*; do cd $pattern; wasm-pack test --firefox --headless; cd ..; done;"
- - 
-      stage: "Release"
+
+      stage: "Compile Wasm"
     - 
       cache: cargo
       language: rust
@@ -48,8 +48,8 @@ matrix:
         - "for pattern in ./*; do cd $pattern; wasm-pack build --target web --release --scope noiseexplorer_$pattern; rm pkg/.gitignore; cd ..; done"
         - "cd $TRAVIS_BUILD_DIR"
         -  NOISE_VER="x" 
-        -  git config --global user.email "travis@travis-ci.org"
-        -  git config --global user.name "Travis CI"
+        -  git config --global user.email "georgio@symbolic.software"
+        -  git config --global user.name "georgio"
         -  git checkout master > /dev/null 2>&1
         -  git merge --squash pre-release > /dev/null 2>&1
         -  cd $TRAVIS_BUILD_DIR/src
