--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,21 @@ matrix:
       language: go
       script: 
         - "for pattern in ./*; do cd $pattern; go get -d ./...; go run *; cd ../; done"
+            - language: rust
     - 
+      addons: 
+        firefox: latest
+      cache: cargo
+      language: rust
+      rust: 
+        - stable
+        - beta
+        - nightly
+      script: 
+        -  sudo curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+        -  cd $TRAVIS_BUILD_DIR/implementations/wasm
+        -  for pattern in ./*; do cd $pattern; wasm-pack test --firefox --headless; cd ..; done;
+    -
       addons: 
         firefox: latest
       cache: cargo
