--- a/src/Makefile
+++ b/src/Makefile
@@ -30,9 +30,10 @@ tests:
 html:
 	@cd util && bash genHtml.sh
 
-release:
+pre-release:
 	@cd util && node prep.js
-	@make implementations && git add -A && git branch pre-release && git checkout pre-release && git push origin pre-release
+	@make implementations
+
 clean:
 	@/bin/echo -n "[NoiseExplorer] Cleaning up... "
 	@rm -f parser/noiseParser.js
