--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ matrix:
         - beta
         - nightly
       script: 
-        - "sudo curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh"
+        # - "sudo curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh"
         - "cd $TRAVIS_BUILD_DIR/implementations/wasm"
-        - "for pattern in ./*; do cd $pattern; wasm-pack test --firefox --headless; cd ..; done;"
+        # - "for pattern in ./*; do cd $pattern; wasm-pack test --firefox --headless; cd ..; done;"
     - 
       addons: 
         firefox: latest
@@ -43,19 +43,19 @@ matrix:
         - beta
         - nightly
       script: 
-        - "sudo curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh"
-        - "cd $TRAVIS_BUILD_DIR/implementations/wasm"
-        - "for pattern in ./*; do cd $pattern; wasm-pack build --target web --release --scope noiseexplorer_$pattern; rm pkg/.gitignore; cd ..; done"
+        # - "sudo curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh"
+        # - "cd $TRAVIS_BUILD_DIR/implementations/wasm"
+        # - "for pattern in ./*; do cd $pattern; wasm-pack build --target web --release --scope noiseexplorer_$pattern; rm pkg/.gitignore; cd ..; done"
         - "cd $TRAVIS_BUILD_DIR"
         - "NOISE_VER=\"1.0.1\""
         - "git config --global user.email \"georgio@symbolic.software\""
         - "git config --global user.name \"georgio\""
         - "git checkout master > /dev/null 2>&1"
         - "git merge --squash pre-release > /dev/null 2>&1"
-        - "cd $TRAVIS_BUILD_DIR/src"
-        - "make wasm"
-        - "cd ../"
-        - "git add * > /dev/null 2>&1"
+        # - "cd $TRAVIS_BUILD_DIR/src"
+        # - "make wasm"
+        # - "cd ../"
+        - "git add -A > /dev/null 2>&1"
         - "git commit -m \"Release Noise Explorer v${NOISE_VER}\" > /dev/null 2>&1"
         - "git remote rm origin"
         - "git remote add origin https://georgio:${GH_TOKEN}@github.com/SymbolicSoft/noiseexplorer.git > /dev/null 2>&1"
