Install pegjs globally

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 dependencies:
 	@/bin/echo -n "[NoiseExplorer] Installing dependencies..."
 	@npm install --save pegjs conventional-commits-parser 
+	@npm install -g pegjs
 	@npm install
 	@curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 	@/bin/echo " OK."
